# xmrigCC

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  how_to_build  xmrigDaemon
cmake/: argon2.cmake  ghostrider.cmake  kawpow.cmake  randomx.cmake
doc/: ALGORITHMS.md
scripts/: build.hwloc.sh  build.hwloc1.sh  build.libressl.sh  build.openssl.sh  build.openssl3.sh  build.uv.sh  build.zlib.sh  build_deps.sh  generate_cl.js
src/: config.json  version.h
src/backend/cpu/: CpuConfig_gen.h  CpuWorker.cpp
src/backend/cpu/platform/: BasicCpuInfo.cpp  HwlocCpuInfo.cpp
src/backend/cuda/: CudaBackend.cpp
src/backend/opencl/: OclConfig_gen.h  opencl.cmake
src/backend/opencl/cl/cn/: algorithm.cl
src/backend/opencl/cl/rx/: randomx.cl
src/base/crypto/: Algorithm.cpp  Algorithm.h  Coin.cpp  Coin.h
src/base/kernel/: Platform_unix.cpp  Platform_win.cpp
src/base/kernel/config/: BaseTransform.cpp
src/base/kernel/interfaces/: IConfig.h
src/base/net/https/: HttpsClient.cpp  HttpsClient.h
src/base/net/stratum/: DaemonClient.cpp  EthStratumClient.cpp  Job.cpp  Job.h  Pool.cpp  Pools.cpp  SelfSelectClient.cpp
src/base/tools/cryptonote/: WalletAddress.cpp
src/cc/: CCClient.cpp  CCClientConfig.cpp  CCClientConfig.h
src/core/config/: Config_default.h  Config_platform.h  usage.h
src/crypto/cn/: CnHash.cpp  CryptoNight_arm.h
src/crypto/ghostrider/: CMakeLists.txt  ghostrider.cpp
src/crypto/randomx/: randomx.cpp  randomx.h
src/crypto/rx/: RxAlgo.cpp
src/net/strategies/: DonateStrategy.cpp  DonateStrategy.h
